[project]
name = "vllm-starter"
version = "0.1.0"
description = "A starter template for vLLM server for LLM inference."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "setuptools>=78.1.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "vllm>=0.8.2",
]
